--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -29,14 +29,16 @@ body {
     position: absolute;
 }
 
-.stars {
+.stars-1 {
     position: absolute;
     width: 500px;
-    right: 0;
+    transform: translate(-50%, 0%);
 }
 
-.stars_1, .stars_2 {
-
+.stars-2 {
+    position: absolute;
+    width: 500px;
+    transform: translate(-50%, -100%);
 }
 
 .nebula_1 {
@@ -66,6 +68,6 @@ body {
     width: 50px;
 }
 
-#game_button #play {
+#pause_button #play {
     display: none;
 }
