--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,11 +1,3 @@
-body {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    background: white;
-    overflow: hidden;
-}
-
 .road {
     position: fixed;
     width: 500px;
@@ -29,39 +21,39 @@ body {
     position: absolute;
 }
 
-.stars-1 {
+.stars_1 {
     position: absolute;
     width: 500px;
     transform: translate(-50%, 0%);
 }
 
-.stars-2 {
+.stars_2 {
     position: absolute;
     width: 500px;
     transform: translate(-50%, -100%);
 }
 
 .nebula_1 {
-    transform: translate(2vh, 35vh);
-    width: 200px;
+    transform: translate(-30vh, 10vh);
+    width: 300px;
 }
 
 .nebula_2 {
-    transform: translate(-30vh, 10vh);
-    width: 300px;
+    transform: translate(2vh, 35vh);
+    width: 200px;
 }
 
 #pause_button {
     position: fixed;
     background: transparent;
     border: none;
-    padding: 0;
+    padding: 5px;
     cursor: pointer;
     transition: transform 0.07s ease;
 }
 
 #pause_button:hover {
-    transform: scale(1.2, 1.2) rotate(10deg);
+    transform: scale(1.15, 1.15) rotate(10deg);
 }
 
 #pause_button img {
