--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -91,3 +91,22 @@
     text-align: left;
     color: white;
 }
+
+#game_over {
+    display: none;
+    position: fixed;
+    width: 500px;
+    height: 300px;
+    background: darkred;
+    font-size: 50px;
+    color: white;
+    border: 2px solid black;
+    bottom: 50%;
+}
+
+.game_button {
+    background: white;
+    width: 200px;
+    height: 70px;
+    font-size: 20px;
+}
