--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -3,6 +3,10 @@
     height: 90vh;
     bottom: 0;
     background: #19061F;
+    border-left: 5px solid #CDB1ED;
+    border-right: 5px solid #CDB1ED;
+    background-position: inherit;
+    /*align: center;*/
 }
 
 #player {
@@ -27,7 +31,7 @@
     position: absolute;
     width: 6px;
     height: 18px;
-    background: white;
+    background: #CDB1ED;
     left: 50%;
     right: 50%;
 }
@@ -80,16 +84,19 @@
 }
 
 #info {
-    width: 500px;
-    height: 90vh;
+    width: 250px;
+    height: auto;
     bottom: 0;
-    background: black;
+    background:  #19061F;
+    text-align: right;
+    /*border-right: 5px solid #CDB1ED;*/
+    /*border-top: 5px solid whitesmoke;*/
 }
 
 #info h1 {
     margin: 12px 20px;
     text-align: left;
-    color: white;
+    color: #CDB1ED;
 }
 
 #game_over {
@@ -97,16 +104,19 @@
     position: fixed;
     width: 500px;
     height: 300px;
-    background: darkred;
+    background: #382B40;
     font-size: 50px;
-    color: white;
-    border: 2px solid black;
-    bottom: 50%;
+    color: #CDB1ED;
+    border: 10px solid #CDB1ED;
+    bottom: 10%;
+    vertical-align: center;
 }
 
 .game_button {
-    background: white;
+    background: #CDB1ED;
     width: 200px;
     height: 70px;
     font-size: 20px;
+    border: 10px solid #CDB1ED;
+    font-weight: bold;
 }
