--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -36,6 +36,15 @@
     right: 50%;
 }
 
+.enemy_bullet {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: #FF4001;
+    left: 50%;
+    right: 50%;
+}
+
 .bg_sprite {
     position: absolute;
 }
@@ -53,7 +62,7 @@
 }
 
 .nebula_1 {
-    transform: translate(-30vh, 10vh);
+    transform: translate(-10vh, 10vh);
     width: 300px;
 }
 
@@ -64,15 +73,20 @@
 
 #pause_button {
     position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
     background: transparent;
     border: none;
-    padding: 5px;
     cursor: pointer;
+    width: 50px;
+    height: 43px;
+    transform: translate(-25px);
     transition: transform 0.07s ease;
 }
 
 #pause_button:hover {
-    transform: scale(1.15, 1.15) rotate(10deg);
+    transform: translate(-25px) scale(1.15, 1.15) rotate(10deg);
 }
 
 #pause_button img {
@@ -84,7 +98,7 @@
 }
 
 #info {
-    width: 250px;
+    width: 300px;
     height: auto;
     bottom: 0;
     background:  #19061F;
@@ -108,8 +122,7 @@
     font-size: 50px;
     color: #CDB1ED;
     border: 10px solid #CDB1ED;
-    bottom: 10%;
-    vertical-align: center;
+    top: 30vh;
 }
 
 .game_button {
@@ -119,4 +132,8 @@
     font-size: 20px;
     border: 10px solid #CDB1ED;
     font-weight: bold;
+}
+
+#new_record {
+    display: none;
 }
