--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'font';
+    src: url(fonts/font.ttf);
+
+    font-family: 'big';
+    src: url(fonts/fontbig.ttf);
+}
+
 #road {
     width: 500px;
     height: 90vh;
@@ -13,7 +21,7 @@
     position: absolute;
     width: 60px;
     transform: translate(-270px, 75vh);
-    border: 1px solid green;
+    /*border: 1px solid green;*/
     left: 50%;
     right: 50%;
 }
@@ -22,7 +30,7 @@
     position: absolute;
     width: 90px;
     height: auto;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     left: 50%;
     right: 50%;
 }
@@ -98,6 +106,7 @@
 }
 
 #info {
+    font-family: big;
     width: 300px;
     height: auto;
     bottom: 0;
@@ -108,12 +117,14 @@
 }
 
 #info h1 {
+    font-family: big;
     margin: 12px 20px;
     text-align: left;
     color: #CDB1ED;
 }
 
 #game_over {
+    font-family: big;
     display: none;
     position: fixed;
     width: 500px;
@@ -129,6 +140,7 @@
     background: #CDB1ED;
     width: 200px;
     height: 70px;
+    font-family: big;
     font-size: 20px;
     border: 10px solid #CDB1ED;
     font-weight: bold;
